[dependencies]
number_or_string = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.error-chain]
version = "0.10"
default-features = false

[dependencies.libflo_std]
path = "../libflo_std"
version = "0.1"

[package]
authors = ["Tyler Wolf Leonhardt <tyler.wolf.leonhardt@gmail.com>"]
description = "Allows libflo to dispatch typed actions."
exclude = [
    ".gitignore",
    "README",
    "test/**"
]
license = "MIT"
name = "libflo_action"
version = "0.1.1"
