[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.error-chain]
version = "0.10"
default-features = false

[dependencies.libflo_func]
path = "../libflo_func"
version = "0.1"

[dependencies.libflo_module]
path = "../libflo_module"
version = "0.1"

[package]
authors = ["Tyler Wolf Leonhardt <tyler.wolf.leonhardt@gmail.com>"]
description = "A library for declaring events, and binding functions to them in libflo."
exclude = [
    ".gitignore",
    "README",
    "test/**"
]
license = "MIT"
name = "libflo_event"
version = "0.1.2"
