[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sharedlib = "7"

[dependencies.error-chain]
version = "0.10"
default-features = false

[dependencies.libflo_error]
path = "../libflo_error"
version = "0.1"

[dependencies.libflo_module]
path = "../libflo_module"
version = "0.1"

[package]
authors = ["Tyler Wolf Leonhardt <tyler.wolf.leonhardt@gmail.com>"]
description = "A library for loading modules into libflo."
exclude = [
    ".gitignore",
    "README",
    "test/**"
]
license = "MIT"
name = "libflo_func"
version = "0.1.2"
