[dependencies]
serde_json = "1.0"

[dependencies.error-chain]
version = "0.10"
default-features = false

[dependencies.libflo_std]
path = "../libflo_std"
version = "0.1"

[lib]
crate-type = ["dylib"]

[package]
authors = ["Tyler Wolf Leonhardt <tyler.wolf.leonhardt@gmail.com>"]
description = "Everything you need to implement a libflo host."
exclude = [
    ".gitignore",
    "README",
    "test/**"
]
license = "MIT"
name = "libflo_lmod"
version = "0.1.2"
