[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.error-chain]
version = "0.10"
default-features = false

[package]
authors = ["Tyler Wolf Leonhardt <tyler.wolf.leonhardt@gmail.com>"]
description = "The base libflo module loader."
exclude = [
    ".gitignore",
    "README",
    "test/**"
]
license = "MIT"
name = "libflo_module"
version = "0.1.2"
