[dependencies]
lazy_static = "0.2"
mut_static = "5"

[dependencies.libflo]
path = "../libflo"
version = "0.1"

[dependencies.libflo_error]
path = "../libflo_error"
version = "0.1"

[dependencies.libflo_event]
path = "../libflo_event"
version = "0.1"

[dependencies.libflo_func]
path = "../libflo_func"
version = "0.1"

[dependencies.libflo_module]
path = "../libflo_module"
version = "0.1"

[package]
authors = ["Tyler Wolf Leonhardt <tyler.wolf.leonhardt@gmail.com>"]
description = "Provides an easy way to include libflo in a project."
exclude = [
    ".gitignore",
    "README",
    "test/**"
]
license = "MIT"
name = "libflo_std"
version = "0.1.1"
