[dependencies]
lazy_static = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.libflo_action_std]
path = "../../../libflo_action_std"
version = "0.1"

[dependencies.libflo_std]
path = "../../../libflo_std"
version = "0.1"

[lib]
crate-type = ["dylib"]

[package]
authors = ["Tyler Wolf Leonhardt <tyler.wolf.leonhardt@gmail.com>"]
description = "A test lib for libflo_action."
exclude = [
    ".gitignore",
    "build.gradle",
    "gradle",
    "gradlew",
    "gradlew.bat",
    "README",
]
license = "MIT"
name = "libflo_action_test_0"
version = "0.1.0"
